--- a/config-repos/service-srd.properties
+++ b/config-repos/service-srd.properties
@@ -1,1 +1,15 @@
-test=test
+server.port=8761
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+eureka.instance.hostname=srd
+eureka.instance.prefer-ip-address=true
+
+spring.cloud.config.profile=default
+spring.cloud.config.label=
+spring.cloud.config.uri= http://localhost:9000
+
+spring.application.name=service-srd
