--- a/config-repos/service-dss.properties
+++ b/config-repos/service-dss.properties
@@ -2,7 +2,7 @@ server-port=9999
 
 eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
 
-spring-datasource-driver-class-name=com.mysql.jdbc.Driver
+hibernate-driver=com.mysql.jdbc.Driver
 
-spring-jpa-properties-hibernate-hbm2ddl.auto=update
-spring-jpa-properties-hibernate-dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate-hbm2ddl=update
+hibernate-dialect=org.hibernate.dialect.MySQL5Dialect
