--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -1,1 +1,7 @@
+server-port=10100
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+uri-dss=http://localhost:9999
+
+time-out=5000
