--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -5,3 +5,5 @@ eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
 uri-dss=http://localhost:9999
 
 time-out=5000
+
+token-available-date=15
