--- a/config-repos/service-srd.properties
+++ b/config-repos/service-srd.properties
@@ -1,3 +1,5 @@
 server-port=8761
 
-eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
+#eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
+
+eureka-client-service-url-defaultZone=http://srd:8761/eureka/
