--- a/config-repos/service-dss.properties
+++ b/config-repos/service-dss.properties
@@ -1,6 +1,6 @@
 server-port=9999
 
-eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
-
+#eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
+eureka-client-service-url-defaultZone=http://srd:8761/eureka/
 hibernate-hbm2ddl=update
 hibernate-dialect=org.hibernate.dialect.MySQL5Dialect
