--- a/config-repos/service-lbs.properties
+++ b/config-repos/service-lbs.properties
@@ -1,3 +1,3 @@
 server-port=10000
 
-eureka-client-service-url-defaultZone=http://srd:8761
+eureka-client-service-url-defaultZone=http://srd:8761/eureka/
