--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -1,8 +1,9 @@
 server-port=10100
 
-eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
-
-uri-dss=http://localhost:9999
+#eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
+eureka-client-service-url-defaultZone=http://srd:8761/eureka/
+#uri-dss=http://localhost:9999
+uri-dss=http://service-dss
 
 time-out=5000
 
