--- a/config-repos/service-dss.properties
+++ b/config-repos/service-dss.properties
@@ -1,6 +1,5 @@
 server-port=9999
 
-#eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
-eureka-client-service-url-defaultZone=http://srd:8761/eureka/
-hibernate-hbm2ddl=update
+eureka-client-service-url-defaultZone=http://114.215.181.111:8761/eureka/
+hibernate-hbm2ddl=none
 hibernate-dialect=org.hibernate.dialect.MySQL5Dialect
