--- a/config-repos/service-dss.properties
+++ b/config-repos/service-dss.properties
@@ -1,5 +1,5 @@
 server-port=9999
-datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/ipp?characterEncoding=utf-8
+datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/ipp
 eureka-client-service-url-defaultZone=http://114.215.181.111:8761/eureka/
 hibernate-hbm2ddl=none
 hibernate-dialect=org.hibernate.dialect.MySQL5Dialect
