--- a/config-repos/service-rms.properties
+++ b/config-repos/service-rms.properties
@@ -1,1 +1,5 @@
 defaultZone=http://114.215.181.111:8761/eureka/
+time-out=50000
+thread-pool-core-size=50
+thread-pool-max-size=200
+uri-dss=http://dss:9999
