--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -3,7 +3,7 @@ server-port=10100
 #eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
 eureka-client-service-url-defaultZone=http://srd:8761/eureka/
 #uri-dss=http://localhost:9999
-uri-dss=http://service-dss
+uri-dss=http://39.108.92.104:9999
 
 time-out=5000
 
