--- a/config-repos/service-dss.properties
+++ b/config-repos/service-dss.properties
@@ -1,5 +1,5 @@
 server-port=9999
-datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/ipp?autoReconnect=true&amp;characterEncoding=utf-8
-eureka-client-service-url-defaultZone=http://114.215.181.111:8761/eureka/
+datasource-url=jdbc:mysql://rm-wz9w5813h4o031140o.mysql.rds.aliyuncs.com:3306/ipp?autoReconnect=true&amp;characterEncoding=utf-8
+eureka-client-service-url-defaultZone=http://39.108.143.32:8761/eureka/
 hibernate-hbm2ddl=update
 hibernate-dialect=org.hibernate.dialect.MySQL5Dialect
