--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -1,14 +1,13 @@
 server-port=10100
 
-#eureka-client-service-url-defaultZone=http://localhost:8761/eureka/
-eureka-client-service-url-defaultZone=http://srd:8761/eureka/
-#uri-dss=http://localhost:9999
-uri-dss=http://39.108.92.104:9999
+eureka-client-service-url-defaultZone=http://39.108.143.32:8761/eureka/
+
+uri-dss=http://dss:9999
 
 time-out=50000
 
 token-available-date=15
 
-thread-pool-core-size=10
+thread-pool-core-size=50
 
-thread-pool-max-size=30
+thread-pool-max-size=100
