--- a/config-repos/service-trade.properties
+++ b/config-repos/service-trade.properties
@@ -2,7 +2,7 @@ server-port=10003
 
 defaultZone=http://39.108.143.32:8761/eureka/
 
-datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/pass?autoReconnect=true&amp;characterEncoding=utf-8
+datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/trade?autoReconnect=true&amp;characterEncoding=utf-8
 
 hibernate-hbm2ddl=update
 
