--- a/config-repos/service-rms.properties
+++ b/config-repos/service-rms.properties
@@ -3,3 +3,7 @@ time-out=50000
 thread-pool-core-size=50
 thread-pool-max-size=200
 uri-dss=http://dss:9999
+uri-park=http://120.77.148.220:10000
+uri-trade=http://120.77.148.220:10003
+uri-member=http://120.77.148.220:10002
+uri-pass=http://120.77.148.220:10001
