--- a/config-repos/service-rms.properties
+++ b/config-repos/service-rms.properties
@@ -7,3 +7,4 @@ uri-park=http://120.77.148.220:10000
 uri-trade=http://120.77.148.220:10003
 uri-member=http://120.77.148.220:10002
 uri-pass=http://120.77.148.220:10001
+uri-list=http://120.77.148.220:10004
