--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -7,6 +7,7 @@ uri-park=http://120.77.148.220:10000
 uri-trade=http://120.77.148.220:10003
 uri-member=http://120.77.148.220:10002
 uri-pass=http://120.77.148.220:10001
+uri-list=http://120.77.148.220:10004
 
 time-out=50000
 
