--- a/config-repos/service-system.properties
+++ b/config-repos/service-system.properties
@@ -3,7 +3,7 @@ server-port=10005
 
 defaultZone=http://39.108.143.32:8761/eureka/
 
-datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/park?autoReconnect=true&amp;characterEncoding=utf-8
+datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/platform?autoReconnect=true&amp;characterEncoding=utf-8
 
 hibernate-hbm2ddl=update
 
