--- a/config-repos/service-rms.properties
+++ b/config-repos/service-rms.properties
@@ -2,9 +2,9 @@ defaultZone=http://39.108.143.32:8761/eureka/
 time-out=50000
 thread-pool-core-size=50
 thread-pool-max-size=200
-uri-dss=http://dss:9999
 uri-park=http://120.77.148.220:10000
 uri-trade=http://120.77.148.220:10003
 uri-member=http://120.77.148.220:10002
 uri-pass=http://120.77.148.220:10001
 uri-list=http://120.77.148.220:10004
+uri-system=http://120.77.148.220:10005
