--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -4,15 +4,14 @@ eureka-client-service-url-defaultZone=http://39.108.143.32:8761/eureka/
 
 uri-dss=http://dss:9999
 uri-park=http://120.77.148.220:10000
-uri-trade=http://120.77.148.220:10003
-uri-member=http://120.77.148.220:10002
 uri-pass=http://120.77.148.220:10001
+uri-member=http://120.77.148.220:10002
+uri-trade=http://120.77.148.220:10003
 uri-list=http://120.77.148.220:10004
+uri-system=http://120.77.148.220:10005
 
 time-out=50000
 
 token-available-date=15
-
 thread-pool-core-size=50
-
 thread-pool-max-size=100
