--- a/config-repos/service-pis.properties
+++ b/config-repos/service-pis.properties
@@ -2,7 +2,7 @@ server-port=10100
 
 eureka-client-service-url-defaultZone=http://39.108.143.32:8761/eureka/
 
-uri-dss=http://dss:9999
+uri-pis=http://pis:10100
 uri-park=http://120.77.148.220:10000
 uri-pass=http://120.77.148.220:10001
 uri-member=http://120.77.148.220:10002
