--- a/config-repos/service-park.properties
+++ b/config-repos/service-park.properties
@@ -2,7 +2,7 @@ server-port=10000
 
 defaultZone=http://39.108.143.32:8761/eureka/
 
-datasource-url=jdbc:mysql://kcsmkjmysql.mysql.rds.aliyuncs.com:3306/park?autoReconnect=true&amp;characterEncoding=utf-8
+datasource-url=jdbc:mysql://rm-wz9w5813h4o031140o.mysql.rds.aliyuncs.com:3306/park?autoReconnect=true&amp;characterEncoding=utf-8
 
 hibernate-hbm2ddl=update
 
