--- a/config-repos/service-lbs.properties
+++ b/config-repos/service-lbs.properties
@@ -1,5 +1,6 @@
 server-port=10010
 
-eureka-client-service-url-defaultZone=http://39.108.143.32:8761/eureka/
+eureka-ip=39.108.143.32
+eureka-port=8761
 
 mis-feign-url=120.78.130.89:10102
